// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should convert partial submission value to answer 1`] = `
[
  {
    "id": "vyLu2NkN70xkS",
    "kind": "multiple_choice",
    "properties": {
      "allowMultiple": true,
      "choices": [
        {
          "id": "F7XrAjByBk2w",
          "label": "Group Choice 1",
        },
        {
          "id": "cFEkKnnXmBP6",
          "label": "Group Choice 2",
        },
      ],
    },
    "title": "Group Multiple Choose ",
    "value": {
      "value": [
        "F7XrAjByBk2w",
        "cFEkKnnXmBP6",
      ],
    },
  },
  {
    "id": "bcFvi1syrp66",
    "kind": "phone_number",
    "properties": {
      "choices": [],
      "defaultCountry": "US",
    },
    "title": "☎️  Your MobilePhone ",
    "value": "+12015551023",
  },
  {
    "id": "yLxkSvkN7u2N",
    "kind": "multiple_choice",
    "properties": {
      "allowMultiple": true,
      "choices": [
        {
          "id": "kF7XrAjByB2w",
          "label": "Choice 1",
        },
        {
          "id": "BP6cFEkKnnXm",
          "label": "Choice 2",
        },
      ],
    },
    "title": "🧱 Multiple Choose ",
    "value": {
      "value": [
        "BP6cFEkKnnXm",
      ],
    },
  },
  {
    "id": "X9F47wrnJImk",
    "kind": "yes_no",
    "properties": {
      "choices": [
        {
          "id": "adUm2Hhr1OOW",
          "label": "Yes",
        },
        {
          "id": "QMR1nZV0u84M",
          "label": "No",
        },
      ],
    },
    "title": "👍 Do you agree with us ",
    "value": "QMR1nZV0u84M",
  },
  {
    "id": "EF9tbsJj3CNZ",
    "kind": "picture_choice",
    "properties": {
      "allowMultiple": false,
      "choices": [
        {
          "id": "XKV4vls1pkAX",
          "image": "http://qej6l0046.bkt.clouddn.com/form/5f2b64476481e3096526715b/1596679926__0-I_F2_OBINdzLx39o3nvZfzXwepkYO9mey0__doge.jpeg",
          "label": "Choice 1",
        },
        {
          "id": "FN5cCteg6SOa",
          "image": "http://qej6l0046.bkt.clouddn.com/form/5f2b64476481e3096526715b/1596679934__iAGYraz-j8J7gIxaC8GDJi017YJWUS16EzU7__p640.jpg",
          "label": "Choice 2",
        },
        {
          "id": "1Fl7MP9Nv2TM",
          "image": "http://qej6l0046.bkt.clouddn.com/form/5f2b64476481e3096526715b/1596679940__IKke45HeAlbu-v_yqOvbUjQHffRQRFSdl8OJ__p225-2.jpeg",
          "label": "Choice 3",
        },
      ],
    },
    "title": "🐶 Choose the dog ",
    "value": {
      "value": [
        "1Fl7MP9Nv2TM",
      ],
    },
  },
  {
    "id": "qCpteNRi2SiO",
    "kind": "file_upload",
    "properties": {},
    "title": "🈴️ Upload you avatar ",
    "value": {
      "filename": "avatar.jpg",
      "url": "https://heyformhq.com/qCpteNRi2SiO_avatar.jpg",
    },
  },
  {
    "id": "NqCpSqCpteiO",
    "kind": "file_upload",
    "properties": {},
    "title": "You sig here",
    "value": "https://heyform.net/sig.jpg",
  },
  {
    "id": "qFN5cteg6SOa",
    "kind": "rating",
    "properties": {
      "total": 10,
    },
    "title": "🪐 Rate here ",
    "value": 5,
  },
  {
    "id": "g6Oayu81jkdqcte",
    "kind": "full_name",
    "properties": {},
    "title": "Full name",
    "value": {
      "firstName": "Ivan",
      "lastName": "Woods",
    },
  },
  {
    "id": "NteSqF9g5cOa6",
    "kind": "input_table",
    "properties": {
      "tableColumns": [
        {
          "id": "name",
          "title": "Name",
        },
        {
          "id": "age",
          "title": "Age",
        },
      ],
    },
    "title": "Input table",
    "value": [
      {
        "age": "16",
        "name": "Ivan",
      },
      {
        "age": "24",
        "name": "Jack Smith",
      },
    ],
  },
  {
    "id": "u1NyLxkSvkN7",
    "kind": "multiple_choice",
    "properties": {
      "allowMultiple": true,
      "allowOther": true,
      "choices": [
        {
          "id": "krAjByF7XB2w",
          "label": "Choice 1",
        },
        {
          "id": "P6cnBFEkKnXm",
          "label": "Choice 2",
        },
      ],
    },
    "title": "✈ Multiple Choose with other",
    "value": {
      "other": "Other answer",
      "value": [
        "P6cnBFEkKnXm",
      ],
    },
  },
  {
    "id": "Svky0NLxkN7u",
    "kind": "multiple_choice",
    "properties": {
      "allowMultiple": false,
      "allowOther": true,
      "choices": [
        {
          "id": "kB2wF7XrAjBy",
          "label": "Choice 1",
        },
        {
          "id": "BPnXm6cFEkKn",
          "label": "Choice 2",
        },
      ],
    },
    "title": "🎉 Single Choose with other",
    "value": {
      "other": "Other answer",
      "value": [],
    },
  },
]
`;

exports[`should convert value to answer 1`] = `
[
  {
    "id": "vyLu2NkN70xkS",
    "kind": "multiple_choice",
    "properties": {
      "allowMultiple": true,
      "choices": [
        {
          "id": "F7XrAjByBk2w",
          "label": "Group Choice 1",
        },
        {
          "id": "cFEkKnnXmBP6",
          "label": "Group Choice 2",
        },
      ],
    },
    "title": "Group Multiple Choose ",
    "value": {
      "value": [
        "F7XrAjByBk2w",
        "cFEkKnnXmBP6",
      ],
    },
  },
  {
    "id": "bcFvi1syrp66",
    "kind": "phone_number",
    "properties": {
      "choices": [],
      "defaultCountry": "US",
    },
    "title": "☎️  Your MobilePhone ",
    "value": "+12015551023",
  },
  {
    "id": "yLxkSvkN7u2N",
    "kind": "multiple_choice",
    "properties": {
      "allowMultiple": true,
      "choices": [
        {
          "id": "kF7XrAjByB2w",
          "label": "Choice 1",
        },
        {
          "id": "BP6cFEkKnnXm",
          "label": "Choice 2",
        },
      ],
    },
    "title": "🧱 Multiple Choose ",
    "value": {
      "value": [
        "BP6cFEkKnnXm",
      ],
    },
  },
  {
    "id": "MVlZfnmjZlye",
    "kind": "multiple_choice",
    "properties": {
      "allowMultiple": false,
      "choices": [
        {
          "id": "14wZu5EyC73q",
          "label": "🍫 Chocolate",
        },
        {
          "id": "MesZoaRCdR5Y",
          "label": "🍍 Pineapple",
        },
      ],
    },
    "title": "👋 Just choose one",
    "value": {
      "value": [
        "MesZoaRCdR5Y",
      ],
    },
  },
  {
    "id": "X9F47wrnJImk",
    "kind": "yes_no",
    "properties": {
      "choices": [
        {
          "id": "adUm2Hhr1OOW",
          "label": "Yes",
        },
        {
          "id": "QMR1nZV0u84M",
          "label": "No",
        },
      ],
    },
    "title": "👍 Do you agree with us ",
    "value": "QMR1nZV0u84M",
  },
  {
    "id": "EF9tbsJj3CNZ",
    "kind": "picture_choice",
    "properties": {
      "allowMultiple": false,
      "choices": [
        {
          "id": "XKV4vls1pkAX",
          "image": "http://qej6l0046.bkt.clouddn.com/form/5f2b64476481e3096526715b/1596679926__0-I_F2_OBINdzLx39o3nvZfzXwepkYO9mey0__doge.jpeg",
          "label": "Choice 1",
        },
        {
          "id": "FN5cCteg6SOa",
          "image": "http://qej6l0046.bkt.clouddn.com/form/5f2b64476481e3096526715b/1596679934__iAGYraz-j8J7gIxaC8GDJi017YJWUS16EzU7__p640.jpg",
          "label": "Choice 2",
        },
        {
          "id": "1Fl7MP9Nv2TM",
          "image": "http://qej6l0046.bkt.clouddn.com/form/5f2b64476481e3096526715b/1596679940__IKke45HeAlbu-v_yqOvbUjQHffRQRFSdl8OJ__p225-2.jpeg",
          "label": "Choice 3",
        },
      ],
    },
    "title": "🐶 Choose the dog ",
    "value": {
      "value": [
        "1Fl7MP9Nv2TM",
      ],
    },
  },
  {
    "id": "qCpteNRi2SiO",
    "kind": "file_upload",
    "properties": {},
    "title": "🈴️ Upload you avatar ",
    "value": {
      "filename": "avatar.jpg",
      "url": "https://heyformhq.com/qCpteNRi2SiO_avatar.jpg",
    },
  },
  {
    "id": "NqCpSqCpteiO",
    "kind": "file_upload",
    "properties": {},
    "title": "You sig here",
    "value": "https://heyform.net/sig.jpg",
  },
  {
    "id": "qFN5cteg6SOa",
    "kind": "rating",
    "properties": {
      "total": 10,
    },
    "title": "🪐 Rate here ",
    "value": 5,
  },
  {
    "id": "g6Oayu81jkdqcte",
    "kind": "full_name",
    "properties": {},
    "title": "Full name",
    "value": {
      "firstName": "Ivan",
      "lastName": "Woods",
    },
  },
  {
    "id": "NteSqF9g5cOa6",
    "kind": "input_table",
    "properties": {
      "tableColumns": [
        {
          "id": "name",
          "title": "Name",
        },
        {
          "id": "age",
          "title": "Age",
        },
      ],
    },
    "title": "Input table",
    "value": [
      {
        "age": "16",
        "name": "Ivan",
      },
      {
        "age": "24",
        "name": "Jack Smith",
      },
    ],
  },
  {
    "id": "u1NyLxkSvkN7",
    "kind": "multiple_choice",
    "properties": {
      "allowMultiple": true,
      "allowOther": true,
      "choices": [
        {
          "id": "krAjByF7XB2w",
          "label": "Choice 1",
        },
        {
          "id": "P6cnBFEkKnXm",
          "label": "Choice 2",
        },
      ],
    },
    "title": "✈ Multiple Choose with other",
    "value": {
      "other": "Other answer",
      "value": [
        "P6cnBFEkKnXm",
      ],
    },
  },
  {
    "id": "Svky0NLxkN7u",
    "kind": "multiple_choice",
    "properties": {
      "allowMultiple": false,
      "allowOther": true,
      "choices": [
        {
          "id": "kB2wF7XrAjBy",
          "label": "Choice 1",
        },
        {
          "id": "BPnXm6cFEkKn",
          "label": "Choice 2",
        },
      ],
    },
    "title": "🎉 Single Choose with other",
    "value": {
      "other": "Other answer",
      "value": [],
    },
  },
]
`;
